--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ dominate==2.5.1
 elasticsearch==7.6.0
 Flask==1.1.1
 Flask-Babel==1.0.0
-Flask-Bootstrap4==4.0.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
@@ -16,11 +16,13 @@ Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 guess-language-spirit==0.5.3
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
 MarkupSafe==1.1.1
+psycopg2==2.8.5
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.12.0
