--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==7.1.1
 dominate==2.5.1
 elasticsearch==7.6.0
 Flask==1.1.1
+Flask-Admin==1.5.6
 Flask-Babel==1.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
